Added Runtime Identifiers for release build.

--- a/UkoaConverter.csproj
+++ b/UkoaConverter.csproj
@@ -3,6 +3,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>UkoaConverter</RootNamespace>
+    <RuntimeIdentifiers>win-x64;osx-x64</RuntimeIdentifiers>
+    <TargetLatestRuntimePatch>false</TargetLatestRuntimePatch>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.3.0" />
